--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -5,24 +5,23 @@
   <%= render 'search_form' %>
 
   <div class="container mt-4">
-    <h4>Order from 10 places</h4>
+    <h4 class="mb-4">Order from 10 places</h4>
 
     <%= render 'flash_alert' %>
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <% @restaurants.each do |restaurant|   %>
       <div class="col">
-        <div class="card">
-          <%= image_tag "Just Eat card.jpeg", class:"card-img-top", alt:"Restaurant photo" %>
+        <div class="card" style="width:90%;">
+          <%= image_tag "Just Eat smaller card.jpeg", class:"card-img-top", alt:"Restaurant photo" %>
           <div class="card-body">
             <h5 class="card-title"><%= restaurant["name"] %></h5>
             <p class="card-text">
               <span class="fa fa-star checked"></span>
               <span> <%= restaurant["rating"]["starRating"] %></span>
-              <span>(<%= restaurant["rating"]["count"] %>)</span></p>
-            <p class="card-text">
-              <%= cuisine = restaurant["cuisines"].map {|cuisine| cuisine["name"]}.first(2).join(", ") %>
-            </p>
+              <span>(<%= restaurant["rating"]["count"] %>)</span>
+              <span><%= cuisine = restaurant["cuisines"].map {|cuisine| cuisine["name"]}.first(2).join(", ") %></span>
+              </p>
             <p class="card-text">
               <%= restaurant["address"].values_at("firstLine", "city", "postalCode").join(", ") %>
             </p>
