--- a/app/views/restaurants/_search_form.html.erb
+++ b/app/views/restaurants/_search_form.html.erb
@@ -1,11 +1,9 @@
 <%= form_with url: search_restaurants_path, scope: :search, method: :get do |form| %>
-  <div>
-    <%= form.label :postcode, "Enter your postcode to discover nearby restaurants", class: "form-label mb-2"%>
+  <div class="me-5">
+    <%= form.label :postcode, "Enter your postcode to discover nearby restaurants", class: "form-label mb-3"%>
     <div class="input-group">
-      <%= form.search_field :postcode,  class: "form-control", placeholder:"e.g: SW1A 1AA, N227AY" %>
-      <div class="input-group-append">
-        <%= form.submit "Search", class: "btn btn-warning" %>
-      </div>
+      <%= form.search_field :postcode,  class: "form-control custom-search", placeholder:"e.g: SW1A 1AA, N227AY" %>
+      <%= form.submit "Search", class: "btn custom-btn" %>
     </div>
   </div>
 </div>
