Update flash alert margin right

--- a/app/views/restaurants/_flash_alert.html.erb
+++ b/app/views/restaurants/_flash_alert.html.erb
@@ -1,3 +1,3 @@
 <% if flash[:alert] %>
-  <div class="alert alert-warning"><%= flash[:alert] %></div>
+  <div class="alert alert-warning me-5"><%= flash[:alert] %></div>
 <% end %>
