Display 'Order from 10 places' message only when restaurant data is available in the response

--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -7,7 +7,9 @@
   <%= render 'search_form' %>
 
   <div class="container mt-4">
+    <% if @restaurants.present? %>
     <h4 class="mb-4">Order from 10 places</h4>
+    <% end %>
 
     <%= render 'flash_alert' %>
 
