--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -16,7 +16,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 mb-5">
       <% @restaurants.each do |restaurant|   %>
         <div class="col">
-          <div class="card" style="width:90%;">
+          <div class="card" style="width:90%;height: 100%;">
             <%= image_tag "Just Eat smaller card.jpeg", class:"card-img-top", alt:"Restaurant photo" %>
             <div class="card-body">
               <h5 class="card-title"><%= restaurant["name"] %></h5>
